# gameboy-emulator

./: .gitignore  LICENSE  bus.txt  cartridge.txt  cpu.txt  flags.txt  instructions.txt  plan.txt
code/: CMakeLists.txt
code/cppFiles/: cpu.cpp  emu.cpp  instruction.cpp
code/headers/: bus.h  cart.h  cpu.h  emu.h  instruction.h  logger.h  st_ty.h
pythonObrada/: createFuncs.py  functions.txt  obrada.py
